Package_Tools/include-C/efl/fertig/edje-1/inarbeit/fertig/Edje_Common.h


extern void edje_password_show_last_set(Eina_Bool password_show_last);
extern void edje_password_show_last_timeout_set(double password_show_last_timeout);
extern Eina_Bool    edje_color_class_set            (const char *color_class, int r, int g, int b, int a, int r2, int g2, int b2, int a2, int r3, int g3, int b3, int a3);
extern void         edje_color_class_apply          (void);
extern Eina_Bool    edje_color_class_get            (const char *color_class, int *r, int *g, int *b, int *a, int *r2, int *g2, int *b2, int *a2, int *r3, int *g3, int *b3, int *a3);
extern void         edje_color_class_del            (const char *color_class);
extern Eina_List   *edje_color_class_list           (void);
extern Eina_Iterator *edje_color_class_active_iterator_new(void);
extern Eina_Iterator *edje_mmap_color_class_iterator_new(Eina_File *f);
extern Eina_Bool    edje_size_class_set             (const char *size_class, Evas_Coord minw, Evas_Coord minh, Evas_Coord maxw, Evas_Coord maxh);
extern Eina_Bool    edje_size_class_get             (const char *size_class, Evas_Coord *minw, Evas_Coord *minh, Evas_Coord *maxw, Evas_Coord *maxh);
extern void         edje_size_class_del             (const char *size_class);
extern Eina_List   *edje_size_class_list            (void);
extern Eina_Iterator *edje_size_class_active_iterator_new(void);
extern Eina_Iterator *edje_mmap_size_class_iterator_new(Eina_File *f);
extern Eina_Bool    edje_text_class_set             (const char *text_class, const char *font, Evas_Font_Size size);
extern Eina_Bool    edje_text_class_get             (const char *text_class, const char **font, Evas_Font_Size *size);
extern void         edje_text_class_del             (const char *text_class);
extern Eina_List   *edje_text_class_list            (void);
extern Eina_Iterator *edje_text_class_active_iterator_new(void);
extern Eina_Iterator *edje_mmap_text_class_iterator_new(Eina_File *f);
extern Eina_List        *edje_mmap_collection_list(Eina_File *f);
extern void              edje_mmap_collection_list_free(Eina_List *lst);
extern Eina_List        *edje_mmap_color_class_used_list(Eina_File *f);
extern Eina_List        *edje_file_color_class_used_list(const char *file);
extern void              edje_file_color_class_used_free(Eina_List *lst);
extern Eina_Bool         edje_mmap_group_exists(Eina_File *f, const char *glob);
 extern Eina_Bool         edje_mmap_3d_has(Eina_File *f, const char *group);
extern Eina_Iterator *edje_file_iterator_new(void);
extern Eina_List        *edje_file_collection_list  (const char *file);
extern void             edje_file_collection_list_free (Eina_List *lst);
extern Eina_Bool        edje_file_group_exists      (const char *file, const char *glob);
typedef enum _Edje_Tween_Mode
{
   EDJE_TWEEN_MODE_NONE              = 0,        
   EDJE_TWEEN_MODE_LINEAR            = 1,        
   EDJE_TWEEN_MODE_SINUSOIDAL        = 2,        
   EDJE_TWEEN_MODE_ACCELERATE        = 3,        
   EDJE_TWEEN_MODE_DECELERATE        = 4,        
   EDJE_TWEEN_MODE_ACCELERATE_FACTOR = 5,        
   EDJE_TWEEN_MODE_DECELERATE_FACTOR = 6,        
   EDJE_TWEEN_MODE_SINUSOIDAL_FACTOR = 7,        
   EDJE_TWEEN_MODE_DIVISOR_INTERP    = 8,        
   EDJE_TWEEN_MODE_BOUNCE            = 9,        
   EDJE_TWEEN_MODE_SPRING            = 10,       
   EDJE_TWEEN_MODE_CUBIC_BEZIER      = 11,       
   EDJE_TWEEN_MODE_LAST              = 12,       
   EDJE_TWEEN_MODE_MASK              = 0xff,     
   EDJE_TWEEN_MODE_OPT_FROM_CURRENT  = (1 << 31) 
} Edje_Tween_Mode;
typedef enum _Edje_Action_Type
{
   EDJE_ACTION_TYPE_NONE                     = 0,  
   EDJE_ACTION_TYPE_STATE_SET                = 1,  
   EDJE_ACTION_TYPE_ACTION_STOP              = 2,  
   EDJE_ACTION_TYPE_SIGNAL_EMIT              = 3,  
   EDJE_ACTION_TYPE_DRAG_VAL_SET             = 4,  
   EDJE_ACTION_TYPE_DRAG_VAL_STEP            = 5,  
   EDJE_ACTION_TYPE_DRAG_VAL_PAGE            = 6,  
   EDJE_ACTION_TYPE_SCRIPT                   = 7,  
   EDJE_ACTION_TYPE_FOCUS_SET                = 8,  
   EDJE_ACTION_TYPE_RESERVED00               = 9,  
   EDJE_ACTION_TYPE_FOCUS_OBJECT             = 10, 
   EDJE_ACTION_TYPE_PARAM_COPY               = 11, 
   EDJE_ACTION_TYPE_PARAM_SET                = 12, 
   EDJE_ACTION_TYPE_SOUND_SAMPLE             = 13, 
   EDJE_ACTION_TYPE_SOUND_TONE               = 14, 
   EDJE_ACTION_TYPE_PHYSICS_IMPULSE          = 15, 
   EDJE_ACTION_TYPE_PHYSICS_TORQUE_IMPULSE   = 16, 
   EDJE_ACTION_TYPE_PHYSICS_FORCE            = 17, 
   EDJE_ACTION_TYPE_PHYSICS_TORQUE           = 18, 
   EDJE_ACTION_TYPE_PHYSICS_FORCES_CLEAR     = 19, 
   EDJE_ACTION_TYPE_PHYSICS_VEL_SET          = 20, 
   EDJE_ACTION_TYPE_PHYSICS_ANG_VEL_SET      = 21, 
   EDJE_ACTION_TYPE_PHYSICS_STOP             = 22, 
   EDJE_ACTION_TYPE_PHYSICS_ROT_SET          = 23, 
   EDJE_ACTION_TYPE_VIBRATION_SAMPLE         = 24, 
   EDJE_ACTION_TYPE_MO                       = 25, 
   EDJE_ACTION_TYPE_VG_ANIM_STOP             = 26, 
   EDJE_ACTION_TYPE_VG_ANIM_PAUSE            = 27, 
   EDJE_ACTION_TYPE_VG_ANIM_RESUME           = 28, 
   EDJE_ACTION_TYPE_VG_ANIM_PLAY             = 29, 
   EDJE_ACTION_TYPE_VG_ANIM_REWIND           = 30, 
   EDJE_ACTION_TYPE_VG_ANIM_LOOP             = 31, 
   EDJE_ACTION_TYPE_LAST                     = 32  
} Edje_Action_Type;
extern void         edje_frametime_set              (double t);
extern double       edje_frametime_get              (void);
extern void         edje_freeze                     (void);
extern void         edje_thaw                       (void);
extern void         edje_language_set               (const char *locale);
extern void         edje_transition_duration_factor_set        (double scale);
extern double       edje_transition_duration_factor_get                  (void);
typedef enum _Edje_Text_Effect
{
   EDJE_TEXT_EFFECT_NONE                = 0,  
   EDJE_TEXT_EFFECT_PLAIN               = 1,  
   EDJE_TEXT_EFFECT_OUTLINE             = 2,  
   EDJE_TEXT_EFFECT_SOFT_OUTLINE        = 3,  
   EDJE_TEXT_EFFECT_SHADOW              = 4,  
   EDJE_TEXT_EFFECT_SOFT_SHADOW         = 5,  
   EDJE_TEXT_EFFECT_OUTLINE_SHADOW      = 6,  
   EDJE_TEXT_EFFECT_OUTLINE_SOFT_SHADOW = 7,  
   EDJE_TEXT_EFFECT_FAR_SHADOW          = 8,  
   EDJE_TEXT_EFFECT_FAR_SOFT_SHADOW     = 9,  
   EDJE_TEXT_EFFECT_GLOW                = 10, 
   EDJE_TEXT_EFFECT_LAST                = 11, 
   EDJE_TEXT_EFFECT_SHADOW_DIRECTION_BOTTOM_RIGHT = (0x0 << 4), 
   EDJE_TEXT_EFFECT_SHADOW_DIRECTION_BOTTOM       = (0x1 << 4), 
   EDJE_TEXT_EFFECT_SHADOW_DIRECTION_BOTTOM_LEFT  = (0x2 << 4), 
   EDJE_TEXT_EFFECT_SHADOW_DIRECTION_LEFT         = (0x3 << 4), 
   EDJE_TEXT_EFFECT_SHADOW_DIRECTION_TOP_LEFT     = (0x4 << 4), 
   EDJE_TEXT_EFFECT_SHADOW_DIRECTION_TOP          = (0x5 << 4), 
   EDJE_TEXT_EFFECT_SHADOW_DIRECTION_TOP_RIGHT    = (0x6 << 4), 
   EDJE_TEXT_EFFECT_SHADOW_DIRECTION_RIGHT        = (0x7 << 4)  
} Edje_Text_Effect;
extern void         edje_box_layout_register        (const char *name, Evas_Object_Box_Layout func, void *(*layout_data_get)(void *), void (*layout_data_free)(void *), void (*free_data)(void *), void *data);
typedef enum _Edje_Object_Table_Homogeneous_Mode
{
   EDJE_OBJECT_TABLE_HOMOGENEOUS_NONE = 0,  
   EDJE_OBJECT_TABLE_HOMOGENEOUS_TABLE = 1, 
   EDJE_OBJECT_TABLE_HOMOGENEOUS_ITEM = 2   
} Edje_Object_Table_Homogeneous_Mode;