advancedpackages/efl/edje-1/Edje_Common.inc


type
  TEdje_Text_Filter_Cb = procedure(data: pointer; obj: PEvas_Object; part: pchar; _type: TEdje_Text_Filter_Type; text: PPchar); cdecl;
  TEdje_Markup_Filter_Cb = procedure(data: pointer; obj: PEvas_Object; part: pchar; text: PPchar); cdecl;

  TEdje_Item_Provider_Cb = function(data: pointer; obj: PEvas_Object; part: pchar; item: pchar): PEvas_Object; cdecl;
  PEdje_Item_Provider_Cb = ^TEdje_Item_Provider_Cb;

procedure edje_password_show_last_set(password_show_last: TEina_Bool); cdecl; external libedje;
procedure edje_password_show_last_timeout_set(password_show_last_timeout: double); cdecl; external libedje;
function edje_color_class_set(color_class: pchar; r: longint; g: longint; b: longint; a: longint; r2: longint; g2: longint; b2: longint; a2: longint; r3: longint; g3: longint; b3: longint; a3: longint): TEina_Bool; cdecl; external libedje;
procedure edje_color_class_apply; cdecl; external libedje;
function edje_color_class_get(color_class: pchar; r: Plongint; g: Plongint; b: Plongint; a: Plongint; r2: Plongint; g2: Plongint; b2: Plongint; a2: Plongint; r3: Plongint; g3: Plongint; b3: Plongint; a3: Plongint): TEina_Bool; cdecl; external libedje;
procedure edje_color_class_del(color_class: pchar); cdecl; external libedje;
function edje_color_class_list: PEina_List; cdecl; external libedje;
function edje_color_class_active_iterator_new: PEina_Iterator; cdecl; external libedje;
function edje_mmap_color_class_iterator_new(f: PEina_File): PEina_Iterator; cdecl; external libedje;
function edje_size_class_set(size_class: pchar; minw: TEvas_Coord; minh: TEvas_Coord; maxw: TEvas_Coord; maxh: TEvas_Coord): TEina_Bool; cdecl; external libedje;
function edje_size_class_get(size_class: pchar; minw: PEvas_Coord; minh: PEvas_Coord; maxw: PEvas_Coord; maxh: PEvas_Coord): TEina_Bool; cdecl; external libedje;
procedure edje_size_class_del(size_class: pchar); cdecl; external libedje;
function edje_size_class_list: PEina_List; cdecl; external libedje;
function edje_size_class_active_iterator_new: PEina_Iterator; cdecl; external libedje;
function edje_mmap_size_class_iterator_new(f: PEina_File): PEina_Iterator; cdecl; external libedje;
function edje_text_class_set(text_class: pchar; font: pchar; size: TEvas_Font_Size): TEina_Bool; cdecl; external libedje;
function edje_text_class_get(text_class: pchar; font: PPchar; size: PEvas_Font_Size): TEina_Bool; cdecl; external libedje;
procedure edje_text_class_del(text_class: pchar); cdecl; external libedje;
function edje_text_class_list: PEina_List; cdecl; external libedje;
function edje_text_class_active_iterator_new: PEina_Iterator; cdecl; external libedje;
function edje_mmap_text_class_iterator_new(f: PEina_File): PEina_Iterator; cdecl; external libedje;
function edje_mmap_collection_list(f: PEina_File): PEina_List; cdecl; external libedje;
procedure edje_mmap_collection_list_free(lst: PEina_List); cdecl; external libedje;
function edje_mmap_color_class_used_list(f: PEina_File): PEina_List; cdecl; external libedje;
function edje_file_color_class_used_list(file_: pchar): PEina_List; cdecl; external libedje;
procedure edje_file_color_class_used_free(lst: PEina_List); cdecl; external libedje;
function edje_mmap_group_exists(f: PEina_File; glob: pchar): TEina_Bool; cdecl; external libedje;
function edje_mmap_3d_has(f: PEina_File; group: pchar): TEina_Bool; cdecl; external libedje; deprecated;
function edje_file_iterator_new: PEina_Iterator; cdecl; external libedje;
function edje_file_collection_list(file_: pchar): PEina_List; cdecl; external libedje;
procedure edje_file_collection_list_free(lst: PEina_List); cdecl; external libedje;
function edje_file_group_exists(file_: pchar; glob: pchar): TEina_Bool; cdecl; external libedje;

type
  PEdje_Tween_Mode = ^TEdje_Tween_Mode;
  TEdje_Tween_Mode = longint;

const
  EDJE_TWEEN_MODE_NONE = 0;
  EDJE_TWEEN_MODE_LINEAR = 1;
  EDJE_TWEEN_MODE_SINUSOIDAL = 2;
  EDJE_TWEEN_MODE_ACCELERATE = 3;
  EDJE_TWEEN_MODE_DECELERATE = 4;
  EDJE_TWEEN_MODE_ACCELERATE_FACTOR = 5;
  EDJE_TWEEN_MODE_DECELERATE_FACTOR = 6;
  EDJE_TWEEN_MODE_SINUSOIDAL_FACTOR = 7;
  EDJE_TWEEN_MODE_DIVISOR_INTERP = 8;
  EDJE_TWEEN_MODE_BOUNCE = 9;
  EDJE_TWEEN_MODE_SPRING = 10;
  EDJE_TWEEN_MODE_CUBIC_BEZIER = 11;
  EDJE_TWEEN_MODE_LAST = 12;
  EDJE_TWEEN_MODE_MASK = $ff;
  EDJE_TWEEN_MODE_OPT_FROM_CURRENT = 1 shl 31;

type
  PEdje_Action_Type = ^TEdje_Action_Type;
  TEdje_Action_Type = longint;

const
  EDJE_ACTION_TYPE_NONE = 0;
  EDJE_ACTION_TYPE_STATE_SET = 1;
  EDJE_ACTION_TYPE_ACTION_STOP = 2;
  EDJE_ACTION_TYPE_SIGNAL_EMIT = 3;
  EDJE_ACTION_TYPE_DRAG_VAL_SET = 4;
  EDJE_ACTION_TYPE_DRAG_VAL_STEP = 5;
  EDJE_ACTION_TYPE_DRAG_VAL_PAGE = 6;
  EDJE_ACTION_TYPE_SCRIPT = 7;
  EDJE_ACTION_TYPE_FOCUS_SET = 8;
  EDJE_ACTION_TYPE_RESERVED00 = 9;
  EDJE_ACTION_TYPE_FOCUS_OBJECT = 10;
  EDJE_ACTION_TYPE_PARAM_COPY = 11;
  EDJE_ACTION_TYPE_PARAM_SET = 12;
  EDJE_ACTION_TYPE_SOUND_SAMPLE = 13;
  EDJE_ACTION_TYPE_SOUND_TONE = 14;
  EDJE_ACTION_TYPE_PHYSICS_IMPULSE = 15;
  EDJE_ACTION_TYPE_PHYSICS_TORQUE_IMPULSE = 16;
  EDJE_ACTION_TYPE_PHYSICS_FORCE = 17;
  EDJE_ACTION_TYPE_PHYSICS_TORQUE = 18;
  EDJE_ACTION_TYPE_PHYSICS_FORCES_CLEAR = 19;
  EDJE_ACTION_TYPE_PHYSICS_VEL_SET = 20;
  EDJE_ACTION_TYPE_PHYSICS_ANG_VEL_SET = 21;
  EDJE_ACTION_TYPE_PHYSICS_STOP = 22;
  EDJE_ACTION_TYPE_PHYSICS_ROT_SET = 23;
  EDJE_ACTION_TYPE_VIBRATION_SAMPLE = 24;
  EDJE_ACTION_TYPE_MO = 25;
  EDJE_ACTION_TYPE_VG_ANIM_STOP = 26;
  EDJE_ACTION_TYPE_VG_ANIM_PAUSE = 27;
  EDJE_ACTION_TYPE_VG_ANIM_RESUME = 28;
  EDJE_ACTION_TYPE_VG_ANIM_PLAY = 29;
  EDJE_ACTION_TYPE_VG_ANIM_REWIND = 30;
  EDJE_ACTION_TYPE_VG_ANIM_LOOP = 31;
  EDJE_ACTION_TYPE_LAST = 32;

procedure edje_frametime_set(t: double); cdecl; external libedje;
function edje_frametime_get: double; cdecl; external libedje;
procedure edje_freeze; cdecl; external libedje;
procedure edje_thaw; cdecl; external libedje;
procedure edje_language_set(locale: pchar); cdecl; external libedje;
procedure edje_transition_duration_factor_set(scale: double); cdecl; external libedje;
function edje_transition_duration_factor_get: double; cdecl; external libedje;

type
  PEdje_Text_Effect = ^TEdje_Text_Effect;
  TEdje_Text_Effect = longint;

const
  EDJE_TEXT_EFFECT_NONE = 0;
  EDJE_TEXT_EFFECT_PLAIN = 1;
  EDJE_TEXT_EFFECT_OUTLINE = 2;
  EDJE_TEXT_EFFECT_SOFT_OUTLINE = 3;
  EDJE_TEXT_EFFECT_SHADOW = 4;
  EDJE_TEXT_EFFECT_SOFT_SHADOW = 5;
  EDJE_TEXT_EFFECT_OUTLINE_SHADOW = 6;
  EDJE_TEXT_EFFECT_OUTLINE_SOFT_SHADOW = 7;
  EDJE_TEXT_EFFECT_FAR_SHADOW = 8;
  EDJE_TEXT_EFFECT_FAR_SOFT_SHADOW = 9;
  EDJE_TEXT_EFFECT_GLOW = 10;
  EDJE_TEXT_EFFECT_LAST = 11;
  EDJE_TEXT_EFFECT_SHADOW_DIRECTION_BOTTOM_RIGHT = $0 shl 4;
  EDJE_TEXT_EFFECT_SHADOW_DIRECTION_BOTTOM = $1 shl 4;
  EDJE_TEXT_EFFECT_SHADOW_DIRECTION_BOTTOM_LEFT = $2 shl 4;
  EDJE_TEXT_EFFECT_SHADOW_DIRECTION_LEFT = $3 shl 4;
  EDJE_TEXT_EFFECT_SHADOW_DIRECTION_TOP_LEFT = $4 shl 4;
  EDJE_TEXT_EFFECT_SHADOW_DIRECTION_TOP = $5 shl 4;
  EDJE_TEXT_EFFECT_SHADOW_DIRECTION_TOP_RIGHT = $6 shl 4;
  EDJE_TEXT_EFFECT_SHADOW_DIRECTION_RIGHT = $7 shl 4;

type
  Tlayout_data_get_func = function(para1: pointer): pointer; cdecl;
  Tlayout_data_free_func = procedure(para1: pointer); cdecl;

procedure edje_box_layout_register(name: pchar; func: TEvas_Object_Box_Layout; layout_data_get: Tlayout_data_get_func; layout_data_free: Tlayout_data_free_func; free_data: Tlayout_data_free_func; data: pointer); cdecl; external libedje;

type
  PEdje_Object_Table_Homogeneous_Mode = ^TEdje_Object_Table_Homogeneous_Mode;
  TEdje_Object_Table_Homogeneous_Mode = longint;

const
  EDJE_OBJECT_TABLE_HOMOGENEOUS_NONE = 0;
  EDJE_OBJECT_TABLE_HOMOGENEOUS_TABLE = 1;
  EDJE_OBJECT_TABLE_HOMOGENEOUS_ITEM = 2;

  // === Konventiert am: 22-5-25 17:55:40 ===


{$ENDIF read_interface}


{$IFDEF read_implementation}


{$ENDIF read_implementation}
